star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_filter.scss
.custom-shop-filter {
    background-color: $header_background;
    padding: 10px 0;
    border-bottom: 1px solid #dedede;
    -webkit-box-shadow: 0 17px 11px -21px rgba(0,0,0,0.75);
    -moz-box-shadow: 0 17px 11px -21px rgba(0,0,0,0.75);
    box-shadow: 0 17px 11px -21px rgba(0,0,0,0.75);
    .breadcrumbs.clearfix {
        background-color: transparent;
        margin: 0;
    }
    h2.category-title {
        text-transform: uppercase;
        text-align: center;
    }
    h4.category-desc {
        text-align: center;
        max-width: 700px;
        margin: 0 auto;
        font-size: 14px;
        margin-bottom: 10px;
    }
    .lst-categories {
        display: flex;
        flex-wrap: nowrap;
        overflow: hidden;
        overflow-x: auto;
        @media screen and (min-width: 1024px) {
            flex-wrap: wrap-reverse;
            overflow: hidden;
            justify-content: center;
            align-items: center;
        }
        a {
            background: #c0c0c01a;
            padding: 10px;
            margin: 5px 10px;
            border-radius: 5px;
            white-space: nowrap;
        }
        &.hide-mobile {
            display: none;
            @media screen and(min-width: 992px){
                display: flex;
            }
        }
    }
    .filters.refine-show-main {
        .list-filters {
            min-height: 0px;
            @media screen and (min-width: 1024px) {
                min-height: 45px;
            }
        }
        .category-attributes {
            border-top: 1px solid #c0c0c045;
            .product-filter-attri {
                float: left;
                .filter-title {
                    margin: 0;
                    padding: 20px 25px 10px 25px;
                    text-transform: uppercase;
                    font-weight: normal;
                    cursor: pointer;
                    font-size: 13px;
                    &:hover {
                        color: red;
                    }
                    &.active {
                        color: red;
                    }
                }
                .filter-attris {
                    position: absolute;
                    border-top: 1px solid #c0c0c045;
                    width: 100%;
                    left: 0;
                    margin-top: 10px;
                    padding-top: 20px;
                    background-color: white;
                    z-index: 900;
                    display: none;
                    -webkit-box-shadow: 0 17px 11px -21px rgba(0,0,0,0.75);
                    -moz-box-shadow: 0 17px 11px -21px rgba(0,0,0,0.75);
                    box-shadow: 0 17px 11px -21px rgba(0,0,0,0.75); 
                    ul {
                        display: flex;
                        flex-direction: row;
                        flex-wrap: wrap;
                        li {
                            list-style: none;
                            margin-right: 30px;
                            text-align: center;
                        }
                        &:not(.filter-ratting) {
                            li {
                                a {
                                    //height: 72px;
                                    //width: 72px;
                                    //display: inline-block;
                                    //border-radius: 35px;
                                    //position: relative;
                                    //background-color: rgb(168, 180, 168);
                                }
                            }
                        }
                        &.filter-ratting {
                            flex-direction: column;
                            justify-content: flex-start;
                            align-items: flex-start;
                            .wc-layered-nav-rating {
                                margin-bottom: 10px;
                                .star-rating {
                                    float: left;
                                }
                                .count-rating {
                                    float: left;
                                    margin-left: 5px;
                                    margin-top: -3px;
                                }
                            }
                            
                        }
                    }
                    &.showfilter {
                        display: block;
                    }
                }
            }
        }
        .filter-price {
            position: relative;
            .widget_price_filter {
                width: 100%;
                position: relative;
                margin-top: 15px;
                @media screen and(min-width: 1024px) {
                    width: 300px;
                    position: absolute;
                    right: 0;
                    top: -35px;
                    margin-top: 0;
                }
                form {
                    button {
                        background: transparent;
                        color: red;
                        padding: 0;
                        padding-top: 5px;
                    }
                }
            }
        }
    }
}

.active-filters-custom {
    ul {
        display: flex;
        flex-wrap: wrap;
        max-width: 1200px;
        margin: 0 auto;
        border-bottom: 1px solid #c0c0c040;
        li.chosen {
            list-style: none;
            padding: 20px;
            a {
                border-radius: 1px;
                border: 1px solid silver;
                padding: 10px 20px;
                &:before {
                    font-family: WooCommerce;
                    speak: none;
                    font-weight: 400;
                    font-variant: normal;
                    text-transform: none;
                    line-height: 1;
                    -webkit-font-smoothing: antialiased;
                    content: "";
                    text-decoration: none;
                    color: #a00;
                    vertical-align: inherit;
                    margin-right: .5em;
                }
            }
        }
    }
}

.woocommerce-products-header {
    display: none;
}


.hide-pc {
    @media screen and (min-width: 1024px) {
        display: none;
    }
}

.filters-mobile {
    position: fixed;
    width: 100%;
    height: 60px;
    background: white;
    z-index: 99999;
    bottom: 0;
    border-top: 2px solid red;
    .title-filter {
        display: flex;
        justify-content: space-around;
        height: 100%;
        h3 {
            margin: 0;
            padding: 0;
            display: flex;
            justify-content: center;
            align-items: center;
            width: calc((100% - 58px) / 2);
            color: red;
            border-right: .5px solid #c3bcbc;
            box-sizing: border-box;
            &#categories {
                border-right: none;
                width: 58px;
                i {
                    margin-right: 0;
                }
            }
            i {
                margin-right: 10px;
            }
        }
    }
}
.popup-modal {
    background-color: rgba(4, 4, 4, 0.76);
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    // short product
    .popup-short-product {
        background-color: white;
        padding: 10px;
        display: flex;
        flex-direction: column;
        width: calc(100% - 50px);
        border-radius: 5px;
        position: relative;
    }
}
#popup-short-product, #popup-categories, #popup-filter-product-attr {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 1000;
    i[id^=close-popup-] {
        position: absolute;
        right: 10px;
        top: 10px;
        color: red;
    }
}

#popup-filter-product-attr, #popup-categories {
    .popup-modal {
        align-items: flex-start;
        // short product
        .popup-product-attr, .popup-categories {
            background-color: white;
            display: flex;
            flex-direction: column;
            width: 100%;
            height: 100%;
            position: relative;
            #header-attr {
                height: 50px;
                border-bottom: 1px solid silver;
                background-color: red;
                color: white;
                font-weight: 500;
                display: flex;
                align-items: center;
                h2 {
                    margin: 0;
                    padding: 0;
                    padding-left: 15px;
                }
            }
            i[id^=close-popup-] {
                color: white;
                border: 1px solid white;
                border-radius: 50%;
                width: 20px;
                height: 20px;
                text-align: center;
                line-height: 17px;
            }
            .categories {
                width: 100%;
                height: calc(100vh - 50px);
                overflow: hidden;
                overflow-y: auto;
                display: flex;
                flex-direction: column;
                a {
                    padding: 10px 0 10px 10px;
                    border-bottom: 1px solid #c0c0c06b;
                    color: black;
                    font-weight: 400;
                }
            }
        }
    
    }
}

.radio-group {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin: 5px 0;
    input {
        margin-right: 10px;
    }
}
.hide {
    display: none !important;
}
.show-block {
    display: block !important;
}

